--- a/menu.css
+++ b/menu.css
@@ -13,14 +13,16 @@ body{
     font-size: 50px;
     flex-direction: column;
     align-items: center;
-    margin-top: 6rem;
+    margin-top: 3rem;
     letter-spacing: 4px;
     margin-bottom: 7rem;
+   
 }
 
 .underline{
     border: 3px solid rgb(158, 130, 2);
     width: 5rem;
+    margin-top: -60px;
 }
 
 
@@ -33,13 +35,21 @@ header{
     font-weight: bold;
     font-size: 23px;
     letter-spacing: 5px;
+    
 }
 
-.img{
+
+
+img{
     border :4px solid rgb(158, 130, 2) ;
     border-radius: 10px;
-    height: 15rem;
+    width: 300px;
+    height: auto;
+   
 }
+
+
+
 h4{
     margin-left: 20px;
     margin-bottom: 0;
@@ -53,7 +63,14 @@ h4{
 }
 
 .item-container{
+    width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  gap: 3rem 2rem;
+  justify-items: center;
+}
+
+.items{
     display: flex;
-    width: 600px;
-    margin-left: 12rem;
 }
