--- a/menu.css
+++ b/menu.css
@@ -57,9 +57,10 @@ h4{
 .info{
     margin-left: 20px;
     letter-spacing: 3px;
+    margin-top: -2rem;
 }
 .price{
-    color:rgb(158, 130, 2) ;
+    color:rgb(158, 130, 2);
 }
 
 .item-container{
@@ -67,10 +68,36 @@ h4{
   margin: 0 auto;
   max-width: 1170px;
   display: grid;
-  gap: 3rem 2rem;
+  gap: 3rem 7rem;
+  grid-template-columns: 1fr 1fr;
   justify-items: center;
 }
 
 .items{
     display: flex;
+}
+
+
+
+.btn-container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 6rem;
+    margin-top: -3rem;
+    gap: 1rem;
+}
+
+button{
+    color:rgb(158, 130, 2);
+    background-color: white;
+    border: 2px solid rgb(158, 130, 2);
+    padding:5px 25px;
+    border-radius: 13px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color:rgb(158, 130, 2);
+    color: white;
 }
